Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-3342

Runtime profile TotalCpuTime are often wrong

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • impala 2.3
    • Impala 2.8.0
    • Backend
    • None

    Description

      When tracking scanner thread CPU time, Impala simply uses the wall clock time from thread start to finish. it doesn't eliminate the waiting time. so the TotalCpuTime is much higher than scanner actually use.
      The plan fragment execution CPU time might have similar issue. although it does eliminate disk IO and network transmit time, it might include waiting time for downstream fragments.

      Attachments

        Activity

          People

            anujphadke Anuj Phadke
            jyu@cloudera.com Juan Yu
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: