be/src/runtime/plan-fragment-executor.h
@@ -242,9 +242,6 @@ class PlanFragmentExecutor {
   /// of the execution.
   RuntimeProfile::Counter* average_thread_tokens_;
 
-  /// Stopwatch for this entire fragment. Started in Prepare(), stopped in Close().
-  MonotonicStopWatch fragment_sw_;
-
   /// (Atomic) Flag that indicates whether a completed fragment report has been or will
   /// be fired. It is initialized to 0 and atomically swapped to 1 when a completed
   /// fragment report is about to be fired. Used for reducing the probability that a
